# tanks-ce

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conversion.txt  makefile  readme.md  tank.blend
src/: ai.c  ai.cpp  ai.h  ai_data.h  ai_state.h  collision.c  collision.cpp  collision.h  constants.h  dynamic_sprites.c  dynamic_sprites.cpp  dynamic_sprites.h  fwd.h  game.cpp  game.h  globals.c  globals.cpp  globals.h  graphics.c  graphics.cpp  graphics.h  gui.c  gui.cpp  gui.h  input.c  input.cpp  input.h  level.c  level.cpp  level.h  main.c  main.cpp  mine.c  mine.cpp  mine.h  objects.c  objects.h  partial_redraw.c  partial_redraw.cpp  partial_redraw.h  (+14 more)
src/ai/: ai.cpp  ai.h  ai_state.h
src/data/: export_levels.cpp  export_levels.h
src/data/gfx/: convimg.yaml  generate_enemy_palette.py
src/data/tiles/: lvl1.csv  lvl10.csv  lvl12.csv  lvl14.csv  lvl15.csv  lvl17.csv  lvl19.csv  lvl20.csv  lvl5.csv  lvl7.csv  lvl8.csv  lvlpack.c  lvlpack.h
src/editor/: tile_mode.h
src/gfx/: convimg.yaml  convpng.ini  generate_enemy_palette.py  move.py  palette  tiles_gfx.c  tiles_gfx.h  tileset.c
src/graphics/: dynamic_sprites.cpp  dynamic_sprites.h  graphics.cpp  graphics.h  gui.cpp  gui.h  partial_redraw.cpp  partial_redraw.h  repalettize.cpp  repalettize.h  tank_sprite.cpp  tank_sprite.h  tiles.cpp  tiles.h
src/gui/: aim_indicator.cpp  aim_indicator.h  banner.cpp  banner.h  error.cpp  error.h  kill_counts.cpp  kill_counts.h  pause.cpp  pause.h  transition.cpp  transition.h
src/objects/: mine.cpp  mine.h  mine_detector.cpp  mine_detector.h  physicsbody.cpp  physicsbody.h  shell.cpp  shell.h  tank.cpp  tank.h
src/physics/: collision.cpp  collision.h  physics.h
src/test/: test.cpp  test.h
src/tiles/: lvl1.csv  lvl10.csv  lvl11.csv  lvl12.csv  lvl13.csv  lvl14.csv  lvl15.csv  lvl16.csv  lvl17.csv  lvl18.csv  lvl19.csv  lvl1_h.csv  lvl2.csv  lvl20.csv  lvl2_h.csv  lvl3.csv  lvl4.csv  lvl5.csv  lvl6.csv  lvl7.csv  lvl8.csv  lvl9.csv  lvlpack.c  lvlpack.h  makefile  template.xlsx  template.xltx  tilemaps.c  tilemaps.h
src/tiles/old/: lvl12.csv  lvl13.csv  lvl14.csv  lvl17.csv  lvl19.csv  lvl2.csv  lvl20.csv  lvl3.csv  lvl4.csv  lvl6.csv  lvl8.csv  lvl9.csv
src/util/: cpp_internals.c  cpp_internals.cpp  debug_malloc.h  profiler.c  profiler.h  trig.cpp  trig.h  util.cpp  util.h
